<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azur"
    android:orientation="vertical"
    android:weightSum="4">


    <include
        android:id="@+id/toolbar"
        app:theme="@style/ThemeOverlay.AppCompat.Light"
        layout="@layout/layout_toolbar" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="15dp"
        android:layout_weight="3"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:background="@color/colorPrimaryDark"
            app:cardBackgroundColor="@color/colorPrimaryDark"
            app:cardCornerRadius="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/google_icon"
                    style="@style/ThemeOverlay.FirebaseIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/desc_firebase_lockup"
                    android:src="@drawable/hydropo128px" />

                <TextView
                    android:id="@+id/title_text"
                    android:layout_width="224dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="16dp"
                    android:text="Hydroponics Assistant"
                    android:theme="@style/ThemeOverlay.MyTitleText" />

                <TextView
                    android:id="@+id/status"
                    style="@style/ThemeOverlay.MyTextDetail"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/signed_out" />

                <TextView
                    android:id="@+id/detail"
                    style="@style/ThemeOverlay.MyTextDetail"
                    android:layout_gravity="center_horizontal"
                    android:visibility="invisible"
                    tools:text="Firebase User ID: 123456789abc" />


                <com.google.android.gms.common.SignInButton
                    android:id="@+id/sign_in_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center_horizontal"
                    android:visibility="visible"
                    tools:visibility="gone" />

                <LinearLayout
                    android:id="@+id/sign_out_and_disconnect"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:background="@color/colorPrimaryDark"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="60dp"
                        android:background="@color/colorPrimaryDark"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/sign_out_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/sign_out"
                            android:theme="@style/ThemeOverlay.MyDarkButton" />

                        <Button
                            android:id="@+id/monitoring_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/start"
                            android:theme="@style/ThemeOverlay.MyDarkButton" />

                        <Button
                            android:id="@+id/disconnect_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/disconnect"
                            android:theme="@style/ThemeOverlay.MyDarkButton" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>


        </android.support.v7.widget.CardView>


    </LinearLayout>

</LinearLayout>