<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MonitoringActivity">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:fitsSystemWindows="true"
        tools:context=".WeatherActivity"
        android:background="@color/azur">

        <include
            android:id="@+id/toolbar"
            layout="@layout/layout_toolbar"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="60dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                app:cardCornerRadius="5dp"
                app:cardBackgroundColor="#2db0ff">

              <LinearLayout
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center_horizontal"
                  android:layout_marginTop="20dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/weatherIconImageView"
                    android:src="@drawable/icon_na"
                    android:contentDescription="@string/condition_icon"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    />

              </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="140dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/temperature"
                    android:id="@+id/temperatureTextView"
                    android:layout_below="@+id/weatherIconImageView"
                    android:layout_centerHorizontal="true"
                    android:textStyle="bold"
                    android:typeface="serif" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="180dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/condition"
                    android:id="@+id/conditionTextView"
                    android:layout_below="@+id/temperatureTextView"
                    android:layout_centerHorizontal="true"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="200dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/location"
                    android:id="@+id/locationTextView"
                    android:layout_below="@+id/conditionTextView"
                    android:layout_centerHorizontal="true"
                    android:textStyle="bold" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="420dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/yahoo_logo"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:id="@+id/imageView"
                    android:contentDescription="@string/powered_by_yahoo" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="200dp">

                <LinearLayout
                    android:id="@+id/forecastContainer"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/locationTextView"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="34dp"
                    android:layout_above="@+id/imageView"
                    android:baselineAligned="false">
                    <fragment
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:name="com.kxland.hydrodonoremote.fragments.WeatherConditionFragment"
                        android:id="@+id/forecast_0"
                        android:layout_weight="1"
                        tools:layout="@layout/fragment_weather_condition" />
                    <fragment
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:name="com.kxland.hydrodonoremote.fragments.WeatherConditionFragment"
                        android:id="@+id/forecast_1"
                        android:layout_weight="1"
                        tools:layout="@layout/fragment_weather_condition" />
                    <fragment
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:name="com.kxland.hydrodonoremote.fragments.WeatherConditionFragment"
                        android:id="@+id/forecast_2"
                        android:layout_weight="1"
                        tools:layout="@layout/fragment_weather_condition" />
                    <fragment
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:name="com.kxland.hydrodonoremote.fragments.WeatherConditionFragment"
                        android:id="@+id/forecast_3"
                        android:layout_weight="1"
                        tools:layout="@layout/fragment_weather_condition" />
                    <fragment
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:name="com.kxland.hydrodonoremote.fragments.WeatherConditionFragment"
                        android:id="@+id/forecast_4"
                        android:layout_weight="1"
                        tools:layout="@layout/fragment_weather_condition" />
                </LinearLayout>


                <!--<Button-->
                    <!--android:id="@+id/btn_show_token"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_alignParentBottom="true"-->
                    <!--android:layout_alignParentStart="true"-->
                    <!--android:text="TOKEN" />-->

                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </RelativeLayout>
    <android.support.design.widget.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/layout_header"
        app:menu="@menu/item_navigasi" />
</android.support.v4.widget.DrawerLayout>